relaxng-gen/tests/snapshots/generate__tuto3b.snap
---
source: relaxng-tool/tests/generate.rs
expression: output
---
<addressBook>
  <card name="John Doe" email="john.doe@example.com"/>
  <card givenName="Fred" familyName="Smith" email="fred.smith@example.com"/>
</addressBook>
