relaxng-gen/tests/snapshots/generate__tuto3c.snap
---
source: relaxng-gen/tests/generate.rs
expression: output
---
<addressBook>
  <card name="John Smith" email="js@example.com"/>
  <card name="John Smith" email="js@example.com"/>
  <card email="js@example.com">
    <name>John Smith</name>
  </card>
  <card name="John Smith">
    <email>js@example.com</email>
  </card>
  <card>
    <name>John Smith</name>
    <email>js@example.com</email>
  </card>
</addressBook>
