relaxng-gen/tests/snapshots/generate__tuto4b.snap
---
source: relaxng-gen/tests/generate.rs
expression: output
---
<doc>
	<bold>
    <italic>bold-italic</italic>
  </bold>
	<italic>italic</italic>
</doc>
