relaxng-gen/tests/snapshots/generate__tuto6.snap
---
source: relaxng-gen/tests/generate.rs
expression: output
---
<card bool="some text">
  <preferredFormat>
    <ff>fftext</ff>
  </preferredFormat>
</card>
