relaxng-gen/tests/snapshots/generate__tuto6a.snap
---
source: relaxng-gen/tests/generate.rs
expression: output
---
<card>
  <preferredFormat>html</preferredFormat>
  <preferredFormat>html</preferredFormat>
  <preferredFormat>
    <ff>something</ff>
  </preferredFormat>
</card>
